--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,9 @@
-JFLAGS =
+JFLAGS = -cp
 JC = javac
+JAR = guava-14.0.1.jar
 .SUFFIXES: .java .class
 .java.class:
-	$(JC) $(JFLAGS) $*.java
+	$(JC) $(JFLAGS) .:$(JAR) $*.java
 
 CLASSES = \
 	MigratableProcess.java \
